fix: corrected z-index values

--- a/Docsite/docsite.css
+++ b/Docsite/docsite.css
@@ -76,7 +76,7 @@
   padding: 1rem 0;
   background-color: var(--white);
   display: none;
-  z-index: 10;
+  z-index: 1;
 }
 
 /* content css */
