--- a/Utilities/utilities.css
+++ b/Utilities/utilities.css
@@ -274,3 +274,7 @@
 .z-1 {
   z-index: 1;
 }
+
+.z-2 {
+  z-index: 2;
+}
